# PLOPP-analysis

./: .gitignore  PCA_FLOPP_PLOPPv1_no_zeros_8cmres.csv  README.md  flopp_merged.csv  master_file.csv  plopp_merged.csv  requirements.txt
Andrew Turner data/: MP_ID_10.CSV  MP_ID_12.CSV  MP_ID_13.CSV  MP_ID_15.CSV  MP_ID_20.CSV  MP_ID_22.CSV  MP_ID_23.CSV  MP_ID_24.CSV  MP_ID_26.CSV  MP_ID_27.CSV  MP_ID_30.CSV  MP_ID_32.CSV  MP_ID_34.CSV  MP_ID_35.CSV  MP_ID_37.CSV  MP_ID_39.CSV  MP_ID_4.CSV  MP_ID_7.CSV  SampleKey.xlsx  SampleKey_correct.csv  SampleKey_correct_sector.csv  merged_validation_data.csv
analysis/: validation_results.csv
analysis/data/andrew_turner/: MP_ID_1.CSV  MP_ID_11.CSV  MP_ID_14.CSV  MP_ID_16.CSV  MP_ID_17.CSV  MP_ID_18.CSV  MP_ID_19.CSV  MP_ID_2.CSV  MP_ID_21.CSV  MP_ID_25.CSV  MP_ID_28.CSV  MP_ID_29.CSV  MP_ID_3.CSV  MP_ID_31.CSV  MP_ID_33.CSV  MP_ID_36.CSV  (+9 more)
analysis/models/: Random Forest_model.pkl  XGBoost.model  best_params.json  hyperparameters.json  rf_pipeline.pkl
analysis/script/: README.md  config.py  data_prep.py  evaluation.py  main.py  model_run.py  pyproject.toml
analysis/src/: PLoPP Model Training.ipynb  best_params.json  environmental_validation_results.csv  pyproject.toml  requirements-pinned.txt  requirements.txt  setup_notebook.ps1  setup_notebook.sh  spectra_analysis.ipynb  spectra_analysis_scratch.ipynb
analysis/src_v2/: README.md  config.py  data_prep.py  evaluation.py  main.py  model_run.py  pyproject.toml
data/: merged_df_sector_color.csv
data/output/: merged_df.csv  random_forest_feature_importances.json
(+533 files in other folders)
