[project]
name = "plopp-analysis"
version = "0.1.0"
description = "PLOPP/FLOPP spectral classification pipeline"
requires-python = ">=3.10"
dependencies = [
    "matplotlib>=3.7",
    "numpy>=1.24",
    "openpyxl>=3.1",
    "pandas>=2.0",
    "scikit-learn>=1.3",
    "scipy>=1.11",
    "seaborn>=0.13",
    "shap>=0.42",
    "xgboost>=1.7",
]

[tool.uv]
package = false
